fix: spacing between icons in desktop view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header.header-scrolled, #header.header-fixed {
   background: rgba(6, 12, 34, 0.98);
-  height: 70px;
+  height: 80px;
   padding: 15px 0;
   transition: all 0.5s;
 }
